--- a/app/install.html
+++ b/app/install.html
@@ -15,6 +15,21 @@
 		<script src="vendor/require.js"></script>
         <script src="vendor/jquery.min.js" type="text/javascript" onload="window.$ = window.jQuery = module.exports;"></script>
         <script>
+          var path = require('path');
+
+          module.paths.push(path.resolve('node_modules'));
+          module.paths.push(path.resolve('../node_modules'));
+          module.paths.push(path.resolve(__dirname, '..', '..', 'electron', 'node_modules'));
+          module.paths.push(path.resolve(__dirname, '..', '..', 'electron.asar', 'node_modules'));
+          module.paths.push(path.resolve(__dirname, '..', '..', 'app', 'node_modules'));
+          module.paths.push(path.resolve(__dirname, '..', '..', 'app.asar', 'node_modules'));
+
+          var Module = require('module');
+          Module.globalPaths.push( path.join(__dirname, 'node_modules') );
+          Module.globalPaths.push( path.join(__dirname, '..', 'node_modules') );
+          Module.globalPaths.push( path.join(__dirname, '..', '..', '..', 'app.asar', 'node_modules') );
+
+          path = undefined;
             $(function() {
                 requirejs(['app'], function (app) {});
             });
@@ -240,7 +255,7 @@
               <td class="text-left" style="padding-bottom: 0px;">
                 <span style="font-size: 22px;" class="program-name"></span>
               </td>
-              <td width="90" style="padding-right: 0px;padding-bottom: 0px;">
+              <td width="92" style="padding-right: 0px;padding-bottom: 0px;">
                  <div class="btn-group">
                    <button type="button" class="btn btn-primary" class="program-install">Install</button>
                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
