Fixing up the install window

--- a/app/install.html
+++ b/app/install.html
@@ -172,6 +172,9 @@
           .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
               padding: 5px;
           }
+          a {
+            cursor: pointer;
+          }
         </style>
     </head>
     <body>
@@ -285,7 +288,7 @@
         </div>
 
         <script>
-          function externalLink() {
+          function externalLink(el) {
             require('electron').shell.openExternal($(el).data('href'));
             return false;
           }
@@ -391,7 +394,7 @@
                         $('.message').show();
                         var install = installed[$(this).data('index')];
                         $('#message-program').text(install.program.name);
-                        ipc.send('install', install.program);
+                        ipc.send('install-program', install.program);
                       });
                   }
 
