--- a/app/app.html
+++ b/app/app.html
@@ -83,6 +83,12 @@
             };
         </script>
         <script>
+          function externalLink(el) {
+            require('electron').shell.openExternal($(el).data('href'));
+            return false;
+          }
+        </script>
+        <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -108,7 +114,7 @@
                         <a href="#/news"><span class="icon-newspaper-o"></span><span class="text">News</span></a>
                     </li>
                     <li class="learn" ng-class="getClass('/learn')">
-                        <a href="#/learn"><span class="icon-mortar-board2"></span><span class="text">Learn</span></a>
+                        <a href="#/learn"><span class="icon-mortar-board2"></span><span class="text">Documentation</span></a>
                     </li>
                     <li class="marketplace" ng-class="getClass('/marketplace')">
                         <a href="#/marketplace"><span class="icon-rocket"></span><span class="text">Marketplace</span></a>
