--- a/app/install.html
+++ b/app/install.html
@@ -352,7 +352,7 @@
                 desc: 'Microsoft Visual Studio: <a data-href="https://www.visualstudio.com/products/free-developer-offers-vs" onclick="return externalLink(this)">http://visualstudio.com</a>',
       					windows: {
       						x86_x64: {
-      							file: 'vs_community_ENU.exe',
+      							file: 'vs_community_ENU.exe /InstallSelectableItems ProgrammingLanguages_Group',
       							url: 'http://go.microsoft.com/fwlink/?LinkID=626924&clcid=0x409'
       						}
       					}
