--- a/app/login.html
+++ b/app/login.html
@@ -275,7 +275,7 @@
                       <a onclick="$('.inner-panel').toggle()" id="signin-toggle" href="javascript:void(0);" >Sign In</a>
                   </div>
                   <div>
-                      <span style="color: #888;">OPengine v0.4</span>
+                      <span style="color: #888;">OPengine Launcher v0.3</span>
                   </div>
               </div>
             </div>
