--- a/app/login.html
+++ b/app/login.html
@@ -226,7 +226,7 @@
                         <a id="offline" href="javascript:void(0);" >Go Offline</a>
                     </div>
                     <div>
-                        <span style="color: #888;">OPengine v0.4</span>
+                        <span style="color: #888;">OPengine Launcher v0.3</span>
                     </div>
                 </div>
             </div>
