--- a/app/app.html
+++ b/app/app.html
@@ -201,7 +201,7 @@
                         </div>
                     </div>
 
-                    <div ng-view style="display:block; height: 100%;"> </div>
+                    <div ng-view style="display:block;"> </div>
 
                 </div>
             </div>
