--- a/app/sceneEditor.html
+++ b/app/sceneEditor.html
@@ -429,6 +429,7 @@
 
 							object = object.clone();
 							object.gameType = editor.selected.gameType;
+							object.opm = editor.selected.opm;
 
 							editor.execute( new AddObjectCommand( object ) );
 						}
