A whole bunch of fixes and improvements

--- a/app/app.html
+++ b/app/app.html
@@ -122,6 +122,9 @@
                     <li class="library" ng-class="getClass('/library')" id="menu-library">
                         <a href="#/library"><span class="icon-books"></span><span class="text">Library</span></a>
                     </li>
+                    <li class="games" ng-class="getClass('/games')">
+                        <a href="#/games"><span class="icon-gamepad2"></span><span class="text">OPifex Games</span></a>
+                    </li>
                     <li class="tools" ng-class="getClass('/tools')">
                         <a href="#/tools"><span class="icon-tools"></span><span class="text">Tools</span></a>
                     </li>
@@ -135,6 +138,9 @@
                     </li>
                     <li class="bug" ng-class="getClass('/bug')">
                         <a href="#/bug"><span class="icon-bug"></span><span class="text">Report a bug</span></a>
+                    </li>
+                    <li class="slack" ng-class="getClass('/slack')">
+                        <a href="#/slack"><span class="icon-slack"></span><span class="text">Join the conversation!</span></a>
                     </li>
                     <li class="settings" ng-class="getClass('/settings')">
                         <a href="#/settings"><span class="icon-gear"></span><span class="text">Settings</span></a>
