--- a/app/app.html
+++ b/app/app.html
@@ -57,6 +57,7 @@
         <script src="vendor/jquery.min.js" type="text/javascript" onload="window.$ = window.jQuery = module.exports;"></script>
         <script src="vendor/bootstrap.min.js"></script>
         <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         <script src="js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 
