--- a/app/spriteSheet.html
+++ b/app/spriteSheet.html
@@ -19,9 +19,9 @@
 	            </div>
 	            <div class="col-xs-3 text-right">
 	                <!-- <a href="" ng-click="toggleConsole()"><span class="icon-terminal"></a>
-	                <a href="#!/bug"><span class="icon-bug"></a>
-	                <a href="#!/message"><span class="icon-message-2"></a>
-	                <a href="#!/settings"><span class="icon-gear"></a> -->
+	                <a href="#/bug"><span class="icon-bug"></a>
+	                <a href="#/message"><span class="icon-message-2"></a>
+	                <a href="#/settings"><span class="icon-gear"></a> -->
 	                <a href="javascript:void(0)" ng-click="toggleCode()"><span ng-class="{ 'icon-equalizer': showCode, 'icon-file-text': !showCode }"></a>
 
 	                <a href="" id="toggle-menu" class="navbar-toggle" onclick="$('#bs-navbar').toggle();">
