fixing more links

--- a/app/app.html
+++ b/app/app.html
@@ -171,9 +171,9 @@
                         {{user.firstName}} {{user.lastName}} ({{user.subscription || 'personal'}}) <span class="icon-chevron-down"></span>
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="#/license">Change Subscription</a></li>
-                        <li><a href="#/account">Account Settings</a></li>
-                        <li><a href="#/slack"><span class="icon-slack"></span> Slack</a></li>
+                        <li><a href="#!/license">Change Subscription</a></li>
+                        <li><a href="#!/account">Account Settings</a></li>
+                        <li><a href="#!/slack"><span class="icon-slack"></span> Slack</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="javascript:void(0)" ng-click="signout()">Sign out</a></li>
                       </ul>
